--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">top wysiwyg web site generator</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-parallax-background mbr-after-navbar" id="header1-45" style="background-image: url(assets/images/full-unsplash-photo-1454165205744-3b78555e5572-2000x1333.jpg);">
+<section class="engine"><a rel="external" href="https://mobirise.com">offline website generator software</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-parallax-background mbr-after-navbar" id="header1-45" style="background-image: url(assets/images/full-unsplash-photo-1454165205744-3b78555e5572-2000x1333.jpg);">
 
     <div class="mbr-overlay" style="opacity: 0.7; background-color: rgb(0, 0, 0);"></div>
 
@@ -100,7 +100,7 @@
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
-                <h3 class="mbr-section-title display-2">Four of my examples</h3>
+                <h3 class="mbr-section-title display-2">Some of my examples</h3>
                 
             </div>
         </div>
@@ -218,7 +218,7 @@
                 <div class="col-xs-12 col-lg-10 col-lg-offset-1" data-form-type="formoid">
                     <div data-form-alert="true"><div hidden="" data-form-alert-success="true">Thanks for filling out form!</div></div>
                     <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="SUBSCRIBE FORM">
-                        <input type="hidden" value="OwJyujAtz4L3JtVfH3H4Voqw2jWt4yRdkDggNzAtyLwN5qZeZytqCBZu9M21cDQNrlS0X0TJ1P46Emoqnuume2ogdYInTQSefWzrWU3R7/nKm1GY6BIZCBYKn3YhR9dw" data-form-email="true">
+                        <input type="hidden" value="bZ1bBgj1Cnrn5l/NBAHG1OP/09kkOYFgM9r594h4OraZSy4MWdZ8MNzymvGW8XwNIDmdvirSpW766F0J4nJEhwXsv7ixypNrR4kgfXDERb+0XQonj5UlnDukfx359M7B" data-form-email="true">
                         <div class="mbr-subscribe mbr-subscribe-dark input-group">
                             <input type="email" class="form-control" name="email" required="" data-form-field="Email" placeholder="Enter Your Email Address..." id="form2-65-email">
                             <span class="input-group-btn"><button type="submit" class="btn btn-primary">SUBSCRIBE</button></span>
@@ -274,7 +274,7 @@
 
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
 
-                    <input type="hidden" value="aPdg5cX8F5an3PtHj1p9PtthocOKHX1LZRGYxQft1x0HFSuVy86ec+DEDY6ZwIjCguoRs4/p+mxGq3+67/xFhFvCUubm4IhvrAto4J28a+cwbiWgtbzq28LkO5b02rvp" data-form-email="true">
+                    <input type="hidden" value="rLzjRPslkNQ3iJicBhhALDRx1B8AvAf2DMo+nbExaMaylxCvdEKAUFizOUaA3W4wmOhhBZv1Bj1NOaJhwkadm3YjV+qcCfDpk/bU9Pec8nA9VTPeRiCr4RR7Cc2jEeL5" data-form-email="true">
 
                     
 
