--- a/Community Manager.html
+++ b/Community Manager.html
@@ -58,7 +58,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">drag and drop site generator software</a></section><section class="mbr-footer mbr-section mbr-section-md-padding mbr-after-navbar" id="contacts3-5c" style="background-color: rgb(46, 46, 46); padding-top: 60px; padding-bottom: 90px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">free mobile web design software</a></section><section class="mbr-footer mbr-section mbr-section-md-padding mbr-after-navbar" id="contacts3-5c" style="background-color: rgb(46, 46, 46); padding-top: 60px; padding-bottom: 90px;">
 
 
     <div class="row">
@@ -102,7 +102,7 @@
 
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
 
-                    <input type="hidden" value="Avfgm3Gdc4Dcy1Uno0WnH48kbJsOe3eQ/fxdWYVySdSw7kLG0WdFGezhZaKVMeg9aFfN9q5eXMDCc46R5pQiZ5JgXOlWz2rg8bjOQ0SKcRGE5LZ0jbbCOcBhi9uOQjns" data-form-email="true">
+                    <input type="hidden" value="nDhXUheqsKPSWSMFmUN9ZdQl4PvWnsBPrYIhss1QPa/z2isyP7gM2jen5x0yNbPMRl7ZPf1MA0/ToRP4cDl2C/8SJjQu1xDDJXCpuzNhBY+OTaeF8FsThLehhrfbp2d5" data-form-email="true">
 
                     
 
