--- a/Community Manager.html
+++ b/Community Manager.html
@@ -58,7 +58,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">free mobile web design software</a></section><section class="mbr-footer mbr-section mbr-section-md-padding mbr-after-navbar" id="contacts3-5c" style="background-color: rgb(46, 46, 46); padding-top: 60px; padding-bottom: 90px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">easy drag and drop web site builder software</a></section><section class="mbr-footer mbr-section mbr-section-md-padding mbr-after-navbar" id="contacts3-5c" style="background-color: rgb(46, 46, 46); padding-top: 60px; padding-bottom: 90px;">
 
 
     <div class="row">
@@ -102,7 +102,7 @@
 
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
 
-                    <input type="hidden" value="nDhXUheqsKPSWSMFmUN9ZdQl4PvWnsBPrYIhss1QPa/z2isyP7gM2jen5x0yNbPMRl7ZPf1MA0/ToRP4cDl2C/8SJjQu1xDDJXCpuzNhBY+OTaeF8FsThLehhrfbp2d5" data-form-email="true">
+                    <input type="hidden" value="0qjLS5wXwioeQ/imRcXC9hAED59d8IT/D93sNpSAfUKFDd13PW2IJJ8Yu8sMgimV9r1lS/DxkurbqoDFBs/AX7Pk4/nHcbfAgY3zEsqm64BqFuPTGkflnrwHzqWibLl9" data-form-email="true">
 
                     
 
