--- a/Photoshop.html
+++ b/Photoshop.html
@@ -59,7 +59,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">simple drag and drop site building software download</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-4m" style="background-color: rgb(255, 255, 255); padding-top: 100px; padding-bottom: 20px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">free offline site generator software</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-4m" style="background-color: rgb(255, 255, 255); padding-top: 100px; padding-bottom: 20px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -1669,7 +1669,7 @@
 
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
 
-                    <input type="hidden" value="kF0GlLTf2J0sqZh3WCeH5h/N2dKIZiALwBMjckhB8q1jgoYAMwDlE7+7/PnV2yXO8OtsQAR5EWlUFBGiVsM5zI1a4WGm02u8gti+pWjNSsKDDFNMQ2jMPuAkiMS1o59Y" data-form-email="true">
+                    <input type="hidden" value="ZIjUn5GrjLO12JleRvTUHelr0o3YDg8klmaT4xlMbi2gDVjp++3XUgBFf99jkk3aeOh6YwLyrexj+lbyGhWjKevG7sAKvnheIU1hoJdIThAsMVqFUJFT5FZ+o5rKBsLC" data-form-email="true">
 
                     
 
