--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">offline website generator software</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-parallax-background mbr-after-navbar" id="header1-45" style="background-image: url(assets/images/full-unsplash-photo-1454165205744-3b78555e5572-2000x1333.jpg);">
+<section class="engine"><a rel="external" href="https://mobirise.com">easy drag and drop website building software</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-parallax-background mbr-after-navbar" id="header1-45" style="background-image: url(assets/images/full-unsplash-photo-1454165205744-3b78555e5572-2000x1333.jpg);">
 
     <div class="mbr-overlay" style="opacity: 0.7; background-color: rgb(0, 0, 0);"></div>
 
@@ -218,7 +218,7 @@
                 <div class="col-xs-12 col-lg-10 col-lg-offset-1" data-form-type="formoid">
                     <div data-form-alert="true"><div hidden="" data-form-alert-success="true">Thanks for filling out form!</div></div>
                     <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="SUBSCRIBE FORM">
-                        <input type="hidden" value="bZ1bBgj1Cnrn5l/NBAHG1OP/09kkOYFgM9r594h4OraZSy4MWdZ8MNzymvGW8XwNIDmdvirSpW766F0J4nJEhwXsv7ixypNrR4kgfXDERb+0XQonj5UlnDukfx359M7B" data-form-email="true">
+                        <input type="hidden" value="uvaGh5zdYPJBd3vT3659QNDYYvaNVLNjyC+brft8RfK5BVRSZhtbOOsGKu8thQLVtdRNmqWngTJcc3PZUNWQrpeOB9upjRGRz+0K10yOzVUJ6E+qhUkdwm8aMPJMpguc" data-form-email="true">
                         <div class="mbr-subscribe mbr-subscribe-dark input-group">
                             <input type="email" class="form-control" name="email" required="" data-form-field="Email" placeholder="Enter Your Email Address..." id="form2-65-email">
                             <span class="input-group-btn"><button type="submit" class="btn btn-primary">SUBSCRIBE</button></span>
@@ -274,7 +274,7 @@
 
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
 
-                    <input type="hidden" value="rLzjRPslkNQ3iJicBhhALDRx1B8AvAf2DMo+nbExaMaylxCvdEKAUFizOUaA3W4wmOhhBZv1Bj1NOaJhwkadm3YjV+qcCfDpk/bU9Pec8nA9VTPeRiCr4RR7Cc2jEeL5" data-form-email="true">
+                    <input type="hidden" value="T+nDbGhDuYHCR5PrnAEII9NH40p1A4JukCjp2oJVSQIi2TZuTiySPzhwv4g15XG4zLFG2FQGIJPPZHKH4vtzdSPEEimhvSswf7TKIKc9tlHs8XSJbiYrdOmxvWkXokZq" data-form-email="true">
 
                     
 
