--- a/LightRoom.html
+++ b/LightRoom.html
@@ -59,7 +59,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Web Site Generator</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-4s" style="background-color: rgb(255, 255, 255); padding-top: 100px; padding-bottom: 20px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">mobirise.com</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-4s" style="background-color: rgb(255, 255, 255); padding-top: 100px; padding-bottom: 20px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -256,7 +256,7 @@
 
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
 
-                    <input type="hidden" value="hidgoBdICpaQV8uVDXww40MoxjwlBi5a61V0xwQZvolVWlTidCgp4QdtC5pQxpC37PLwgJhwAktdgVqyDlP2wzXFPGxSevSqCdv6z+tGhs4LQl5stUnyk+FJ2s/eRcYh" data-form-email="true">
+                    <input type="hidden" value="lVAxwgVC8UquyDxcFAchiDO5cWHTHOXLF+ZNPtZOq8QQaX4ERZy+4DQDbx2x9Fb4wCwIWtDUSIxJM1LRXe4RF5pgD8x7a4jTlNurh8CsvkMAeHRnTmvw9VpEIe9If3fB" data-form-email="true">
 
                     
 
