--- a/Photoshop.html
+++ b/Photoshop.html
@@ -59,7 +59,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Web Builder</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-4m" style="background-color: rgb(255, 255, 255); padding-top: 100px; padding-bottom: 20px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">https://mobirise.com/</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-4m" style="background-color: rgb(255, 255, 255); padding-top: 100px; padding-bottom: 20px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -157,7 +157,7 @@
                             <img alt="" src="assets/images/front-and-back-of-the-cd-cover-with-fixed-measurements-2000x1640-800x656.jpg">
                             
                             <span class="icon-focus"></span>
-                            <span class="mbr-gallery-title">Front and back of the cd cover</span>
+                            <span class="mbr-gallery-title">Front and back of a cd cover build</span>
                         </div>
                     </div><div class="mbr-gallery-item mbr-gallery-item__mobirise3 mbr-gallery-item--p0" data-tags="Awesome" data-video-url="false">
                         <div href="#lb-gallery1-b" data-slide-to="8" data-toggle="modal">
@@ -1717,7 +1717,7 @@
 
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
 
-                    <input type="hidden" value="TLb5c6Db2qAe8c83JfPxiY4JQZ5Tg9J5h7WuD4Ss1fQj6BbuI2STNdoZAgk6VPFYNiCi3emi/sIOihsVNMOKvrNJidhPPERKYuKdS+Zf3U6lS9XCejOQC0mJARXtaNFC" data-form-email="true">
+                    <input type="hidden" value="DwmL2gN6W+SvCiwZvliwTNekvxhpnol0j6ePGLP7FTKR4zYsBjNBqa8XSvTmkEAlM6KXXt+pWhoBZMe1GaPPfk3Ps5N/ydyVZHoHYAEcHT0gAltaZcnCyaqT5bQ0L9c6" data-form-email="true">
 
                     
 
