--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Website Creator</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-parallax-background mbr-after-navbar" id="header1-45" style="background-image: url(assets/images/full-unsplash-photo-1454165205744-3b78555e5572-2000x1333.jpg);">
+<section class="engine"><a rel="external" href="https://mobirise.com">Website Generator</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-parallax-background mbr-after-navbar" id="header1-45" style="background-image: url(assets/images/full-unsplash-photo-1454165205744-3b78555e5572-2000x1333.jpg);">
 
     <div class="mbr-overlay" style="opacity: 0.7; background-color: rgb(0, 0, 0);"></div>
 
@@ -218,7 +218,7 @@
                 <div class="col-xs-12 col-lg-10 col-lg-offset-1" data-form-type="formoid">
                     <div data-form-alert="true"><div hidden="" data-form-alert-success="true">Thanks for filling out form!</div></div>
                     <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="SUBSCRIBE FORM">
-                        <input type="hidden" value="sajbe1keGbtaUP1zn+KufU1fBRm2alsiqKcvsk6rxTSQD8fAKRJecFy2Gojp9EKJA1h2ko/Mijwr5n7iPT8mColEK7+lWTNqfzaxU3xOykZXMzimSIzRFoS/VEFoNZ9X" data-form-email="true">
+                        <input type="hidden" value="BL5tS6ptr2/ItChPSY6pGd4br0wXuayfDdYXYOMGfosU3vHNBdsBdTXDjzm99frhNZQo8siJNwzUz3RZ3p/PGfCynxb/NLtwCf8+6VGuaSbOCymuKhck8/AkRmqVkfht" data-form-email="true">
                         <div class="mbr-subscribe mbr-subscribe-dark input-group">
                             <input type="email" class="form-control" name="email" required="" data-form-field="Email" placeholder="Enter Your Email Address..." id="form2-65-email">
                             <span class="input-group-btn"><button type="submit" class="btn btn-primary">SUBSCRIBE</button></span>
@@ -274,7 +274,7 @@
 
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
 
-                    <input type="hidden" value="uNZquaaX5bSMZK1WdG3EExbensUe7el1jieDyH+W4qi9ytgzdNb7sQP0DqTVvqfhB0cjwQjXr1OmgkREfwT0xloeG0yoAmDTgfc0hBxoUJM/SzPyXfEG2TC6tEo4W3JH" data-form-email="true">
+                    <input type="hidden" value="ip/ZNRwZdjPv+3v+ecpwIkqDGLP1SxyYkrfKd0pGCFXN1mPj97Yd8ZtDjd2t4nt7HixiawZBoE6vyEIgHe83sxy70o4LHPR3/9WiR6q9xiQqPygw74gFTDu+WvfiTNim" data-form-email="true">
 
                     
 
