--- a/Community Manager.html
+++ b/Community Manager.html
@@ -58,7 +58,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">https://mobirise.com/</a></section><section class="mbr-footer mbr-section mbr-section-md-padding mbr-after-navbar" id="contacts3-5c" style="background-color: rgb(46, 46, 46); padding-top: 60px; padding-bottom: 90px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">Web Page Generator</a></section><section class="mbr-footer mbr-section mbr-section-md-padding mbr-after-navbar" id="contacts3-5c" style="background-color: rgb(46, 46, 46); padding-top: 60px; padding-bottom: 90px;">
 
 
     <div class="row">
@@ -102,7 +102,7 @@
 
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
 
-                    <input type="hidden" value="TdPRslnBM1SH/jvnVVhRXFv2Ffv/h62nX0XRAA2BilqA8CweL/vIBLDHEldX5jGky7Kw4Tp0vvh64y4VUd5k2mpXaIiScNjEK+n7oxpwe8Ybi8K9hZetbqsFD06Y/Ix/" data-form-email="true">
+                    <input type="hidden" value="xaVRbQAgWOmYao4z5wj5ZpPh04YIo6SqGE/wb66Ss/ou7o37qgC9+Ny+/gXMT2qOfnrpbZbXRTmyzZDuRUEx3nT1XzBbb+HAZ0OcB6ZVejMkmegvESDlrbcSfe0jCWLb" data-form-email="true">
 
                     
 
