--- a/LightRoom.html
+++ b/LightRoom.html
@@ -59,7 +59,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Site Maker</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-4s" style="background-color: rgb(255, 255, 255); padding-top: 100px; padding-bottom: 20px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">https://mobirise.com/</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-4s" style="background-color: rgb(255, 255, 255); padding-top: 100px; padding-bottom: 20px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -256,7 +256,7 @@
 
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
 
-                    <input type="hidden" value="c2BGbN5Tg2O0fbzUruyDRObfFUGKTs9xDO+Ju1uXUzeg7dkZL1YPwuu0LYs10NDy1ihrPuEX0rrhRnd1wNIE/s95bE1B7TgayrKdte9wOTg4AN8JGO2kwFd/7XJv+ktZ" data-form-email="true">
+                    <input type="hidden" value="Wzt7amwjCXIUfvKhV1fbvaS5kfPVScf7CKZK5FXrnRkVWUcE1kI9kOp50t/RZ6iT48EKpYXKdgwjzaILcLDl9fk5wa7rOQ4eqU+6Y7/oAQq3c0eETwKlWx4POwJJvJAf" data-form-email="true">
 
                     
 
