create github pages

--- a/Community Manager.html
+++ b/Community Manager.html
@@ -58,7 +58,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Web Site Builder</a></section><section class="mbr-footer mbr-section mbr-section-md-padding mbr-after-navbar" id="contacts3-5c" style="background-color: rgb(46, 46, 46); padding-top: 60px; padding-bottom: 90px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">Web Page Builder</a></section><section class="mbr-footer mbr-section mbr-section-md-padding mbr-after-navbar" id="contacts3-5c" style="background-color: rgb(46, 46, 46); padding-top: 60px; padding-bottom: 90px;">
 
 
     <div class="row">
@@ -102,7 +102,7 @@
 
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
 
-                    <input type="hidden" value="P+AOiIyE24VxpSI2gNYJRwu9mvS1xaSLXplvrgGhkMTLAEmA/XFQBIC/N4vB9MCOv2TRhw8nZf8MesNiN2RQFG5Spngt+xE5Bfquhvq5cBvJKRIG1e0tvfIcueBMjlVg" data-form-email="true">
+                    <input type="hidden" value="LEfFgXbCukdLGSNJNnPw8xv/H5F14Pqmsky6gcy9vYc8l/cErO1sgvRHfmuEazX4y+HJAHGU5O3XMkGlN7mzVGsngzZre2vLadnf2oQc3jJKWGANZP2TXTMZD1O0Ez3/" data-form-email="true">
 
                     
 
