--- a/LightRoom.html
+++ b/LightRoom.html
@@ -59,7 +59,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-4s" style="background-color: rgb(255, 255, 255); padding-top: 100px; padding-bottom: 20px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">https://mobirise.com/</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-4s" style="background-color: rgb(255, 255, 255); padding-top: 100px; padding-bottom: 20px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -256,7 +256,7 @@
 
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
 
-                    <input type="hidden" value="ooFn1/myDCUZvVktsZ0CAOGs0JR//H0rwCl/stfIu8gKLz/6ZoauQibFFMKOFyqrLeIY9VyAjVgYfQ5UNhlyWfD3s7umtGtjbg/whkulWHbChAmhwpxne/nc3rA0Icu/" data-form-email="true">
+                    <input type="hidden" value="Ak9FK2YxbIBK2oRkVDyo4Pq9+B0lYSeRB8lxM++nhZGtLdoqFrwM93kO9gMKu9R5Jjp5Gbdn707DvTB3OqEq9hJcSgj6GEU2p4EnMHNe+TQLgbr5orSoGuZJACpP8II+" data-form-email="true">
 
                     
 
